audiotestsrc: fix rounding errors that might cause segments to be one sample too short

https://bugzilla.gnome.org/show_bug.cgi?id=676884